# data-science-project

./: .gitignore  README.md  pyproject.toml
Guides/: Getting started with python.md
data_science_project/boligpris/: crawler.py  main.py  scraper.py
guides/: Getting started with python.md
notebooks/: 00_overview.ipynb  00_overview.md
notebooks/.ipynb_checkpoints/: 00_overview-checkpoint.ipynb
notebooks/basic/: 01_strings.ipynb  02_numbers.ipynb  03_lists.ipynb  04_dictionaries.ipynb  05_conditionals.ipynb  06_for_loops.ipynb  06_if_else.ipynb  07_file_io.ipynb  07_loops.ipynb  08_functions.ipynb  std_lib.ipynb  test_git.ipynb  venv.ipynb
notebooks/basic/.ipynb_checkpoints/: 01_strings-checkpoint.ipynb  03_lists-checkpoint.ipynb  05_conditionals-checkpoint.ipynb  06_for_loops-checkpoint.ipynb  07_file_io-checkpoint.ipynb  (+1 more)
notebooks/data_processing/: 01_pandas_intro.ipynb  02_basic_data_cleaning.ipynb  03_basic_NLP.ipynb  04_data_preprocessing.ipynb  05_Topic_Modelling.ipynb  06_Sentiment_Analysis.ipynb  utils.py
notebooks/data_retrieval/: 01_APIs.ipynb  02_Scraping.ipynb  API.env  Twitter.env
notebooks/exercises/: data_preprocessing_excercise.ipynb  numbers_exercise.ipynb  pandas_intro_exercise.ipynb  strings_exercise.ipynb
notebooks/solutions/: conditionals_exercise_solution.ipynb  data_preprocessing_excercise_solution.ipynb  dictionaries_exercise_solution.ipynb  file_io_exercise.ipynb  for_loops_exercise_solution.ipynb  lists_exercise_solution.ipynb  numbers_exercise_solution.ipynb  pandas_intro_exercise_solution.ipynb  strings_exercise_solution.ipynb
(+4 files in other folders)
