[tool.poetry]
name = "data-science-project"
version = "0.1.0"
description = ""
authors = ["Martin Petri Bagger <mpb@danskecommodities.com>"]
readme = "README.md"
packages = [{include = "data_science_project"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.2.1"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
